# webdriver_manager

rust/: Cargo.toml  test.py
rust/src/: driver.rs  lib.rs  utils.rs
