[package]
name = "seleniumrs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.11.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
futures = "0.3"
regex = "1"
subprocess = "0.2"
chrono = "0.4"
chrono-tz = "0.5"